blog/style.css
@import url('https://fonts.googleapis.com/css?family=Abhaya+Libre|Lato');
* {
    box-sizing: border-box;
}

/*********************** Reset starts***********************/

/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}


/* HTML5 display-role reset for older browsers */

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
    display: block;
}

body {
    line-height: 1;
}

ol, ul {
    list-style: none;
}

blockquote, q {
    quotes: none;
}

blockquote:before, blockquote:after, q:before, q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}


/*********************** Reset ends ***********************/

body {
    font-family: 'Lato', sans-serif;
    color: dimgrey;
    font-size: 11pt;
    width: 800px;
    margin: auto;
    line-height: 1.5em;
}

h1 {
    font-size: 25pt;
    text-transform: uppercase;
    letter-spacing: .5em;
}

h1, section, footer {
    padding-top: 60px;
    padding-bottom: 60px;
}

main {
    margin-top: 30px;
}

article div {
    float: left;
}

h2 {
    display: block;
    font-size: 16px;
    font-style: italic;
    color: lightgrey;
}

h3 {
    padding-bottom: 30px;
    font-size: 22pt;
    font-family: 'Abhaya Libre';
}

.blog-h2{
  font-size: 22pt;
  font-family: 'Abhaya Libre';
  color: dimgrey;
  padding-top: 20px;
  padding-bottom: 10px;
  font-style: normal;
}

a {
    text-decoration: none;
    color: darkturquoise;
}

.blog-content {
    width: 600px;
}

.date {
    width: 150px;
    display: block;
    padding-top: 50px;
    position:static;
}

hr{
    background-color: lightgrey;
    color: lightgrey;
    clear: both;
    margin-bottom: 30px;
}

img {
    padding: 20px;
    box-shadow: 0px 0px 2px 1px rgba(173, 171, 171, 0.5);
}

img:hover {
    box-shadow: 0px 0px 3px 1px rgba(250, 237, 175, .5);
}

li a:hover {
    background-color: gold;
    color: white;
}

p {
    margin-bottom: 10px;
    margin-top: 5px;
}

footer {
    clear: both;
    align-items: center;
    font-size: 10pt;
}

footer li {
    display: inline;
    padding-right: 50px;
}

